- 2024-03-29 CHANGE NOTES    - races_client.lua       - removed '/races ai add [name]' command       - removed 'addAIDriver' function       - added 'coord' and 'heading' arguments to 'spawnAIDriver' function       - player adds and spawns AI driver using '/races ai spawn [name] (vehicle)' command          - player must move away from where AI driver was added for ped and vehicle to spawn       - if player attempts to spawn AI driver, but fails because some restriction is not satisfied(vehicle or vehicle class), AI will be added without a ped and vehicle spawning          - '/races ai list' command will show AI driver without a vehicle       - if player types '/races ai loadGrp [access] [name]', AI driver ped and vehicle will not spawn if player is too close to where AI driver would spawn          - '/races ai list' command will show AI driver without a vehicle          - player must move away for AI driver ped and vehicle to spawn       - player can change AI's vehicle using '/races ai spawn [name] (vehicle)' command       - fixed bug where player is unable spawn AI or load AI group in 'Custom'(-1) class races          - aiState.drivers[name].raceVehicleList was nil when 'spawnAIDriver' function was called       - fixed bug where AI drivers calculated current waypoint incorrectly if player's 'startIsFinish' value is different than 'aiState.startIsFinish'          - was using 'startIsFinish' instead of 'aiState.startIsFinish'          - fix was to use 'aiState.startIsFinish' instead of 'startIsFinish' to calculate current waypoint       - fixed bug where finish event was not triggered by server if player joined race, then left before start delay expired          - 'bestLapVehicleName' was nil before start delay expired          - server ignored finish event because 'vehicleName' argument was nil          - results event would not be triggered by server          - race would not be deleted on server and player would not be able to register another race             - p

--- a/html/index.css
+++ b/html/index.css
@@ -264,15 +264,11 @@ input {
     height: 44px;
 }
 
-#ai_add {
+#ai_spawn {
     width: 15%;
 }
 
 #ai_delete {
-    width: 15%;
-}
-
-#ai_spawn {
     width: 15%;
 }
 
